# tbd-dev

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.sh
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_repo_fields.py  003_add_build_pipeline_fields.py  004_add_github_user_fields.py  005_add_github_token.py  006_add_build_settings.py  007_add_network_policies.py  008_add_deploy_logs.py  009_add_project_members.py  010_add_project_platform_fields.py  011_add_production_url.py  012_add_container_tracking.py  013_add_templates.py  014_add_repo_template_fields.py  015_add_nextjs_portfolio_template.py
api/app/: __init__.py  config.py  database.py  main.py
api/app/middleware/: auth.py  rate_limit.py
api/app/models/: __init__.py  audit.py  base.py  build.py  deploy.py  environment.py  network.py  network_policy.py  project.py  secret.py  template.py  user.py
api/app/routers/: admin.py  audit.py  auth.py  builds.py  deploys.py  environments.py  github.py  members.py  network_policies.py  networks.py  projects.py  quotas.py  secrets.py  templates.py  users.py
api/app/schemas/: audit.py  auth.py  build.py  deploy.py  environment.py  members.py  network.py  network_policy.py  project.py  quota.py  secret.py  template.py  user.py
api/app/services/: audit.py  auth.py  build_coordinator.py  builder.py  deploy_executor.py  deploy_queue.py  deploy_teardown.py  dns_routing.py  firewall.py  (+13 more)
api/tests/: conftest.py  test_auth.py  test_health.py  test_rate_limit.py  test_rbac.py
(+112 files in other folders)
